# FPA

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  package-lock.json  pyproject.toml
app/: db.sqlite3
app/app/: settings.py
app/core/: apps.py
app/core/domain/entities/: base.py  department.py  mark.py  script.py  worker.py
app/core/infra/models/: department.py  mark.py  script.py  worker.py
app/core/logic/: container.py
app/core/migrations/: 0001_initial.py
front/: package-lock.json  package.json
front/src/: App.vue
front/src/assets/: base.css  main.css
front/src/components/: Dashboard.vue  EmployeeCard.vue  Footer.vue  Navbar.vue  StoreList.vue
