[tool.poetry]
name = "fpa"
version = "0.1.0"
description = ""
authors = ["EgorLozh <121402796+EgorLozh@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.2"
punq = "^0.7.0"
django-rest-framework = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
